--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,77 +1,192 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Home page</title>
 </head>
 
 <body>
-
-    <header class="bg-dark my-2">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+    <div class="containter-fluid bg-dark mb-2"></div>
+    <div class="row justify-content-center">
+        <div class="col-8">
+            <header class="bg-dark my-2">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">Django</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="#">Cursos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Blog</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Cursos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contato</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Login</a>
+                                </li>
+                            </ul>
+                            <form class="d-flex">
+                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">Search</button>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="100%" height="100%" fill="green" />
+                            </svg>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Conheça os cursos da Academia Python</h5>
+                                <p>Aprenda a construir sites responsivos com Python, Django e Bootstrap 5</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="100%" height="100%" fill="blue" />
+                            </svg>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="100%" height="100%" fill="red" />
+                            </svg>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </header>
 
-    <main class="bg-light">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-8">
-                Conteúdo></div>
-            </div>
-        </div>
-    </main>
+            <main class="bg-light">
+                <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col-8">
 
-    <footer class="bg-dark">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    Rodapé
+
+
+
+                            <div class="row">
+                                <div class="col-8 d-flex">
+                                    <div class="card vh-75 vm-100">
+                                        <img src="{% static '/blog/images/django01.jpg' %}" class="card-img-top"
+                                            alt="imagem django01">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Título do post</h5>
+                                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                                elit.
+                                                Repellendus rerum quis enim distinctio ratione eos adipisci et modi!
+                                                Eius nisi
+                                                eligendi necessitatibus, eveniet libero aliquam minus dolorum voluptates
+                                                quaerat
+                                                eaque.</p>
+                                            <p class="card-text">
+                                                <small class="text-muted">Publicado em 21/12/2012</small>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-4 d-flex">
+                                    <div class="card vh-75 vm-100">
+                                        <img src="{% static 'blog/images/django02.jpg' %}" class="card-img-top"
+                                            alt="texto-questao">
+                                        <div class="card-body">
+                                            <div class="form-check">
+                                                <div class="card"">
+                                            <ul class=" list-group list-group-flush">
+                                                    {% for i in 'ABCDE' %}
+                                                    <div class="list-group-input">
+                                                        <input class="form-check-input" type="radio"
+                                                            name="flexRadioDefault" id="flexRadioDefault1">
+                                                        <label class="form-check-label" for="flexRadioDefault1">
+                                                            Alternativa {{i}}
+                                                        </label>
+                                                    </div>
+                                                    {% endfor %}
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="btn btn-success mt-2 d-grid">Responder</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </main>
+
+            <footer class="bg-dark py-4 my-2">
+                <div class="container-fluid text-white">
+                    <div class="row justify-content-center">
+                        <div class="col-2 text-left">
+                            <h5 class="text-uppercase fw-bold text-info">Quem somos</h5>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        </div>
+                        <div class="col-4 text-left">
+                            <h5 class="text-uppercase fw-bold text-info">Onde queremos chegar?</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ut consequuntur!
+                                Reprehenderit illo id sapiente, excepturi eius autem, nemo ullam reiciendis blanditiis
+                                assumenda
+                                aspernatur sint. Obcaecati ut temporibus sit quas.</p>
+                        </div>
+                        <div class="col-2">
+                            <h5 class="text-uppercase fw-bold text-info">Siga-nos nas redes</h5>
+                            <p>
+                                <i class="fa-brands fa-youtube"></i>
+                                <a href="#" class="text-white" style="text-decoration: none;">Youtube</a>
+                            </p>
+                            <p>
+                                <i class="fa-brands fa-github"></i>
+                                <a href="#" class="text-white" style="text-decoration: none;">Github</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+
         </div>
-    </footer>
+    </div>
+    </div>
 
 
-    
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
+        crossorigin="anonymous"></script>
 
 </body>
 
