--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -8,179 +8,136 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
     <title>Home page</title>
 </head>
 
 <body>
     <div class="containter-fluid bg-dark mb-2"></div>
     <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-xl-8">
             <header class="bg-dark my-2">
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#">Django</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="#">Cursos</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Blog</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Cursos</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contato</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Login</a>
-                                </li>
-                            </ul>
-                            <form class="d-flex">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-success" type="submit">Search</button>
-                            </form>
-                        </div>
-                    </div>
-                </nav>
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="100%" height="100%" fill="green" />
-                            </svg>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Conheça os cursos da Academia Python</h5>
-                                <p>Aprenda a construir sites responsivos com Python, Django e Bootstrap 5</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="100%" height="100%" fill="blue" />
-                            </svg>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="100%" height="100%" fill="red" />
-                            </svg>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </header>
+                {% include 'blog/fragments/navbar.html' %}
 
-            <main class="bg-light">
-                <div class="container-fluid">
-                    <div class="row justify-content-center">
-                        <div class="col-8">
+                {% include 'blog/fragments/carousel.html' %}
+        </div>
+        </header>
 
+        <main class="bg-light">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-xl-8">
+                        <div class="row">
+                            <div class="col-lg-8 d-flex pb-4">
+                                <div class="card vh-75 vm-100">
+                                    {% with item=posts|first %}
+                                    <a href="{% url 'post_details' posts.0.id %}">
+                                        <img src="{% if item and item.imagem_capa %}{{ item.imagem_capa.url }}{% else %}{% static 'img/placeholder.jpg' %}{% endif %}"
+                                            class="card-img-top" alt="imagem django01">
+                                    </a>
+                                    {% endwith %}
+                                    <div class="card-body">
+                                        <a href="{% url 'post_details' posts.0.id %}">
+                                            <h5 class="card-title">{{posts.0.titulo}}</h5>
+                                        </a>
+                                        <p class="card-text">{{posts.0.resumo|safe}}</p>
+                                        <p class="card-text">
+                                            <small class="text-muted">Publicado em
+                                                {{posts.0.data_publicacao}}</small>
+                                        </p>
 
-
-
-                            <div class="row">
-                                <div class="col-8 d-flex">
-                                    <div class="card vh-75 vm-100">
-                                        <img src="{% static '/blog/images/django01.jpg' %}" class="card-img-top"
-                                            alt="imagem django01">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Título do post</h5>
-                                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing
-                                                elit.
-                                                Repellendus rerum quis enim distinctio ratione eos adipisci et modi!
-                                                Eius nisi
-                                                eligendi necessitatibus, eveniet libero aliquam minus dolorum voluptates
-                                                quaerat
-                                                eaque.</p>
-                                            <p class="card-text">
-                                                <small class="text-muted">Publicado em 21/12/2012</small>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-4 d-flex">
-                                    <div class="card vh-75 vm-100">
-                                        <img src="{% static 'blog/images/django02.jpg' %}" class="card-img-top"
-                                            alt="texto-questao">
-                                        <div class="card-body">
-                                            <div class="form-check">
-                                                <div class="card"">
-                                            <ul class=" list-group list-group-flush">
-                                                    {% for i in 'ABCDE' %}
-                                                    <div class="list-group-input">
-                                                        <input class="form-check-input" type="radio"
-                                                            name="flexRadioDefault" id="flexRadioDefault1">
-                                                        <label class="form-check-label" for="flexRadioDefault1">
-                                                            Alternativa {{i}}
-                                                        </label>
-                                                    </div>
-                                                    {% endfor %}
-                                                    </ul>
+                                        <div class="row">
+                                            <div class="d-flex justify-content-center">
+                                                <div class="span me-3 btn">
+                                                    <i class="fa-solid fa-heart"></i> Curtir
+                                                </div>
+                                                <div class="span me-3 btn">
+                                                    <i class="fa-solid fa-comment"></i> Comentar
+                                                </div>
+                                                <div class="span me-3 btn">
+                                                    <i class="fa-solid fa-share"></i> Compartilhar
                                                 </div>
                                             </div>
-                                            <a href="#" class="btn btn-success mt-2 d-grid">Responder</a>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 d-none d-lg-flex">
+                                <div class="card vh-75 vm-100">
+                                    <img src="{% static 'blog/images/django02.jpg' %}" class="card-img-top img-300"
+                                        alt="texto-questao">
+                                    <div class="card-body">
+                                        <div class="form-check">
+                                            <div class="card"">
+                                            <ul class=" list-group list-group-flush">
+                                                {% for i in 'ABCDE' %}
+                                                <div class="list-group-input">
+                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                        id="flexRadioDefault1">
+                                                    <label class="form-check-label" for="flexRadioDefault1">
+                                                        Alternativa {{i}}
+                                                    </label>
+                                                </div>
+                                                {% endfor %}
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <a href="#" class="btn btn-success mt-2 d-grid">Responder</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="my-4">
+                        <div class="container bg-dark py-2 d-flex justify-content-center rounded">
+                            <span>
+                                <h3 class="text-info">Post Recentes</h3>
+                            </span>
+                        </div>
+                        <hr class="my-4">
+                        <div class="row row-cols-1 row-cols-md-3 g-2">
+                            {% for post in posts|slice:"1:5" %}
+                            <div class="col">
+                                <div class="card">
+                                    {% if post.imagem_capa %}
+                                    <a href="{% url 'post_details' post.id %}">
+                                        <img src="{{ post.imagem_capa.url }}" alt="{{ post.titulo }}" class="img-300">
+                                    </a>
+                                    {% else %}
+                                    <img src="{% static 'blog/images/default.jpg' %}" alt="sem imagem" class="img-300">
+                                    {% endif %}
+                                    <div class="card-body">
+                                        <a href="{% url 'post_details' post.id %}">
+                                            <h5 class="card-title">{{ post.titulo|slice:":15"}}...</h5>
+                                        </a>
+                                        <p class="card-text">{{post.conteudo|safe}}</p>
+
+                                        <div class="row">
+                                            <div class="d-flex justify-content-center">
+                                                <div class="span me-3 btn">
+                                                    <i class="fa-solid fa-heart"></i> Curtir
+                                                </div>
+                                                <div class="span me-3 btn">
+                                                    <i class="fa-solid fa-comment"></i> Comentar
+                                                </div>
+                                                <div class="span me-3 btn">
+                                                    <i class="fa-solid fa-share"></i> Compartilhar
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
-            </main>
+            </div>
+        </main>
 
-            <footer class="bg-dark py-4 my-2">
-                <div class="container-fluid text-white">
-                    <div class="row justify-content-center">
-                        <div class="col-2 text-left">
-                            <h5 class="text-uppercase fw-bold text-info">Quem somos</h5>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
-                        </div>
-                        <div class="col-4 text-left">
-                            <h5 class="text-uppercase fw-bold text-info">Onde queremos chegar?</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ut consequuntur!
-                                Reprehenderit illo id sapiente, excepturi eius autem, nemo ullam reiciendis blanditiis
-                                assumenda
-                                aspernatur sint. Obcaecati ut temporibus sit quas.</p>
-                        </div>
-                        <div class="col-2">
-                            <h5 class="text-uppercase fw-bold text-info">Siga-nos nas redes</h5>
-                            <p>
-                                <i class="fa-brands fa-youtube"></i>
-                                <a href="#" class="text-white" style="text-decoration: none;">Youtube</a>
-                            </p>
-                            <p>
-                                <i class="fa-brands fa-github"></i>
-                                <a href="#" class="text-white" style="text-decoration: none;">Github</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </footer>
+        {% include 'blog/fragments/footer.html' %}
 
-        </div>
+    </div>
     </div>
     </div>
 
