--- a/blog/templates/blog/post_details.html
+++ b/blog/templates/blog/post_details.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    <title>Post - Detalhes</title>
 </head>
-<body>
-   <h2> Post Details</h2>
-    <br>
-    Id: {{post.id}}
-    <br>
-    <br>
-    Autor: {{post.autor}}
-    <br>
-    <br>
-    Título: {{post.titulo}}
-    <br>
-    <br>
-    Subtítulo: {{post.subtitulo}}
-    <br>
-    <br>
-    Conteúdo: {{post.conteudo|safe}}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
 
+<body>
+    <div class="containter-fluid bg-dark mb-2">
+        <div class="row justify-content-center">
+            <div class="col-xl-8">
+                <header class="bg-dark my-2">
+                    {% include 'blog/fragments/navbar.html' %}
+                </header>
+            </div>
+        </div>
+    </div>
+
+    <main class="bg-light">
+        <div class="containter-fluid bg-light mb-2">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2>{{post.titulo}}</h2>
+                    <hr class="my-2">
+                    <article class="fs-5 px-5 mx-2">
+                        {{post.conteudo|safe}}
+                    </article>
+                </div>
+            </div>
+        </div>
+    </main>
+    {% include 'blog/fragments/footer.html' %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..."
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
