--- a/blog/templates/blog/fragments/footer.html
+++ b/blog/templates/blog/fragments/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark py-4 my-2">
+<footer class="bg-dark py-4 my-2 {{var_position}}">
     <div class="container-fluid text-white">
         <div class="row justify-content-center">
             <div class="col-lg-2 text-left">
