--- a/blog/templates/blog/post_details.html
+++ b/blog/templates/blog/post_details.html
@@ -27,11 +27,82 @@
         <div class="containter-fluid bg-light mb-2">
             <div class="row justify-content-center">
                 <div class="col-xl-8">
-                    <h2>{{post.titulo}}</h2>
+                    <hr class="my-2">
+                    <div class="container fluid my-4">
+                        <div class="flex-row d-flex my-2">
+                            <h2>{{post.titulo}}</h2>
+                            <span class="d-flex justify-content-center align-items-center ms-3">
+                                <span class="me-2 btn" data-bs-toggle="tooltip" data-bs-placement="top" title="Compartilhar no Instagram">
+                                    <i class="fa-brands fa-instagram-square fa-2xl"></i>   
+                                </span>
+                                <span class="me-2 btn" data-bs-toggle="tooltip" data-bs-placement="top" title="Compartilhar no Facebook">
+                                    <i class="fa-brands fa-facebook fa-2xl"></i>   
+                                </span>
+                                <span class="me-2 btn" data-bs-toggle="tooltip" data-bs-placement="top" title="Compartilhar no Twitter">
+                                    <i class="fa-brands fa-twitter fa-2xl"></i>   
+                                </span>
+                                <span class="me-2 btn" data-bs-toggle="tooltip" data-bs-placement="top" title="Compartilhar">
+                                    <i class="fa-brands fa-link fa-2xl"></i>   
+                                </span>
+                                
+                            </span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                           <div class="d-flex flex-row align-items-center">
+                            <div class="rounded-circle d-flex justify-content-center align-items-center bg-info" style="width:100px; height: 100px;">
+                                
+                            </div> 
+                            <p class="mb-0">
+                                    <span class="mx-2 h5">
+                                        {{post.autor}}
+                                    </span>
+                                    <span>
+                                        <i class="fa-solid fa-clock"></i>
+                                        <span>
+                                            30 min
+                                        </span>
+                                    </span>
+                                    <br>
+                                    <span class="mx-2">
+                                        <i class="fa-solid fa-tags"></i>
+                                    </span>
+                                    <span>
+                                        <a href="#" class="text-decoration-none text-muted"> #Basico</a>
+                                    </span>
+                                    <span>
+                                        <a href="#" class="text-decoration-none text-muted"> #Python</a>
+                                    </span>
+                                    <br>
+                                    <span class="mx-2">
+                                        {{post.subtitulo}}
+                                    </span>
+                                </p>
+                           </div> 
+                        </div>
+                    </div>
                     <hr class="my-2">
                     <article class="fs-5 px-5 mx-2">
                         {{post.conteudo|safe}}
                     </article>
+                    <hr class="my-2">
+
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-12 d-flex justify-content-start">
+                                    <span>
+                                        <div class="span me-3 btn">
+                                                    <i class="fa-solid fa-heart fa-2xl"></i> Curtir
+                                                </div>
+                                                <div class="span me-3 btn">
+                                                    <i class="fa-solid fa-comment fa-2xl"></i> Comentar
+                                                </div>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+
                 </div>
             </div>
         </div>
